# tetr-ch-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
examples/: 01_get-user-info.rs  02_search-for-account.rs  03_get-user-summaries.rs  04_get-user-leaderboard.rs  05_get-historical-user-leaderboard.rs  06_get-user-records.rs  07_get-record-leaderboard.rs  08_search-for-record.rs  09_get-news.rs  10_get-server-stats.rs  11_get-server-activity.rs  12_get-scoreflow-leagueflow.rs  13_get-all-rank-metadata.rs  14_get-achievement-info.rs  15_pagination-for-leaderboard.rs  README.md
examples/ex01_get_user_details/: Cargo.toml
examples/ex02_get_server_statistics/: Cargo.toml
examples/ex03_get_server_activity/: Cargo.toml
examples/ex04_get_user_records/: Cargo.toml
examples/ex05_get_league_leaderboard/: Cargo.toml
examples/ex06_get_xp_leaderboard/: Cargo.toml
examples/ex07_get_streams/: Cargo.toml
examples/ex08_get_latest_news/: Cargo.toml
examples/ex09_constants/: Cargo.toml
examples/ex10_search_accounts/: Cargo.toml
src/: client.rs  constants.rs  error.rs  lib.rs  util.rs
src/client/: error.rs  mod.rs  response.rs
src/model/: achievement.rs  achievement_info.rs  cache.rs  error_response.rs  latest_news.rs  leaderboard.rs  league.rs  league_leaderboard.rs  league_rank.rs  mod.rs  news.rs  record.rs  records_leaderboard.rs  response.rs  role.rs  searched_record.rs  searched_user.rs  server_activity.rs  server_stats.rs  stream.rs  user.rs  user_records.rs  xp_leaderboard.rs
src/util/: mod.rs
tests/: client.rs  lib.rs
(+44 files in other folders)
