[package]
name = "tetr_ch"
description = "A Rust wrapper for the TETRA CHANNEL API. "
version = "0.7.0"
authors = ["Rinrin.rs <rinrin0413.valley@gmail.com>"]
license-file = "LICENSE"
repository = "https://github.com/Rinrin0413/tetr-ch-rs.git"
readme = "README.md"
keywords = ["tetrio", "tetr-io", "tetr_io", "tetra-channel-api", "wrapper"]
edition = "2021"

[dependencies]
http = "0.2.8"
percent-encoding = "2.3.1"
serde_json = "1.0.108"

[dependencies.reqwest]
version = "0.11.11"
features = ["json"]

[dependencies.serde]
version = "1.0.137"
features = ["derive"]

[dependencies.chrono]
version = "0.4.19"
default-features = false
features = ["clock"]

[dependencies.uuid]
version = "1.11.0"
features = ["v4"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4.2"
